PAD図コード化 実行環境作る

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -32,13 +32,14 @@
       </div>
 
 		  <div class="lesson-menu">
-        <ul>
-          <li><a href="tutorial.html">チュートリアル</a></li>
-          <li><a href="kadai1-1.html">課題１－１</a></li>
-          <li><a href="kadai1-2.html">課題１－２</a></li>
-          <li><a href="kadai1-3.html">課題１－３</a></li>
-          <li><a href="kadai1-4.html">課題１－４</a></li>
-        </ul>
+              <ul>
+                  <li><a href="tutorial.html">チュートリアル</a></li>
+                  <li><a href="kadai1-1.html">課題１－１</a></li>
+                  <li><a href="kadai1-2.html">課題１－２</a></li>
+                  <li><a href="kadai1-3.html">課題１－３</a></li>
+                  <li><a href="kadai1-4.html">課題１－４</a></li>
+                  <li><a href="kadai3-1.html">課題３－１</a></li>
+              </ul>
       </div>
 	  </main>
 
