入力なしのコンパイル→実行に対応。やったぜ！

--- a/kadai3-1.html
+++ b/kadai3-1.html
@@ -96,9 +96,16 @@
         </div>
         <div class="pad pad-textzone">
           <p>テキストゾーン</p>
+          <button id="copy2clipboard">コードをクリップボードにコピー</button>
+          <p id="copyalert" class="copy_alert">コピーしました</p>
           <textarea id="serialize_output">
 
           </textarea>
+          <button id="compile_clang">コンパイルっ！</button>
+            <textarea id="compiler_output">
+
+            </textarea>
+
         </div>
 
         <div id="console-bottom">
