非アクティブ時に画面を表示しないように変更

--- a/kadai3-1.html
+++ b/kadai3-1.html
@@ -29,16 +29,15 @@
             <button class="button" id="login-btn">解答開始</button>
         </div>
     </div>
+    <div class="popup-content" style="display: none">
+        <h1>スコアリングのため、ウィンドウ非アクティブ時は画面表示できません。</h1>
+    </div>
 </header>
 
 <main>
     <div class="main-wrapper">
         <div class="page-message">
             <h1>Padエディタ</h1>
-            <p>ここに説明が入ります．ここに説明が入ります．ここに説明が入ります．<br>
-                ここに説明が入ります．ここに説明が入ります．ここに説明が入ります．<br>
-                ここに説明が入ります．ここに説明が入ります．ここに説明が入ります．</p>
-            <a class="button" href="testpage.html">テストページ</a>
             <div id="stage-info"></div>
         </div>
 
