問題自動読み込み ブロックランダム化 SQL送信を更新 UIのブロックエリアをSTICKYに
TODO
分岐処理

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="jquery.balloon.js"></script>
     <script src="jquery-sortable.js"></script>
     <script type="text/javascript" src="javascript.js"></script>
+    <script type="text/javascript" src="myindexjs.js"></script>
     <title>おさかな工房</title>
   </head>
   <body>
@@ -32,13 +33,8 @@
       </div>
 
 		  <div class="lesson-menu">
-              <ul>
+              <ul class="kadai_list">
                   <li><a href="tutorial.html">チュートリアル</a></li>
-                  <li><a href="kadai1-1.html">課題１－１</a></li>
-                  <li><a href="kadai1-2.html">課題１－２</a></li>
-                  <li><a href="kadai1-3.html">課題１－３</a></li>
-                  <li><a href="kadai1-4.html">課題１－４</a></li>
-                  <li><a href="kadai3-1.html">課題３－１</a></li>
               </ul>
       </div>
 	  </main>
