graphics.jsを用いた図形描画に着手 バグ発生中

--- a/kadai.html
+++ b/kadai.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="stylesheet.css">
     <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
     <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
+    <script src="https://cdn.anychart.com/js/latest/graphics.min.js"></script>
     <script type="text/javascript" src="jcanvas.js"></script>
     <script src="jquery.balloon.js"></script>
     <script src="jquery-sortable.js"></script>
@@ -76,6 +77,7 @@
                             <ul>
                                 <li id="end-block" class="block">処理終了</li>
                             </ul>
+                            <div id="graphics_container"></div>
                         </div>
                     </div>
                     <div id="panel3" class="pad pad-textzone tab_panel">
