--- a/kadai.html
+++ b/kadai.html
@@ -49,7 +49,7 @@
             </div>
         </div>
 
-        <div class="pad-editor">
+        <!-- <div class="pad-editor"> -->
 
             <div class="pad tab_wrap">
                 <div class="tab_area">
@@ -97,7 +97,7 @@
                 </div>
             </div>
 
-        </div>
+        <!-- </div> -->
         <div class="submit-btn-wrapper">
             <button class="button" id="submit-btn">提出</button>
         </div>
