--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 		  <div class="main-wrapper">
 			  <div class="page-message">
 			  	<h1>Padエディタ</h1>
-				  <p>ここに説明が入ります．ここに説明が入ります．ここに説明が入ります．<br>
-				  ここに説明が入ります．ここに説明が入ります．ここに説明が入ります．<br>
-				  ここに説明が入ります．ここに説明が入ります．ここに説明が入ります．</p>
+				  <p>2021年03月14日 現在作業中のコミット</p>
         </div>
       </div>
 
