第一回提出

--- a/kadai.html
+++ b/kadai.html
@@ -10,6 +10,7 @@
     <script src="jquery.balloon.js"></script>
     <script src="jquery-sortable.js"></script>
     <script src="leader-line.min.js"></script>
+    <!-- <script src="autosize.js"></script> -->
     <script type="text/javascript" src="javascript.js"></script>
     <title>おさかな工房</title>
 </head>
