--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                   <li><a href="kadai.html?name=program08basic02">関数を使ってみよう（直角三角形の印字）</a></li>
                   <li><a href="kadai.html?name=program08basic03">関数を使ってみよう2（金利の計算）</a></li>
                   <li><a href="kadai.html?name=program09basic02">関数を使ってみよう3（内積の計算）</a></li>
-                  <li><a href="kadai.html?name=program09basic03">（動作未確認）関数を使ってみよう4（行列の積）</a></li>
-                  <li><a href="kadai.html?name=program10basic01">（動作未確認）文字列の扱い（整数の取得・浮動小数点の取得）</a></li>
+                  <li><a href="kadai.html?name=program09basic03">関数を使ってみよう4（行列の積）</a></li>
+                  <li><a href="kadai.html?name=program10basic01">文字列の扱い（整数の取得・浮動小数点の取得）</a></li>
                   <li><a href="kadai.html?name=program10basic02">（動作未確認）文字列の扱い2（文字列の連結）</a></li>
                   <li><a href="kadai.html?name=program11basic01">（動作未確認）ポインタを使ってみよう（大きい順に入れ替える関数の作成）</a></li>
                   <li><a href="kadai.html?name=program11basic02">（動作未確認）ポインタを使ってみよう2（ベクトルの和）</a></li>
