complete questions, some fixes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		  <div class="main-wrapper">
 			  <div class="page-message">
 			  	<h1>Padエディタ</h1>
-				  <p>2021年03月14日 現在作業中のコミット</p>
+				  <p>2021/04/03 現在作業中のコミット</p>
           
           <h3>マニュアル</h3>
           
@@ -99,11 +99,11 @@
                   <li><a href="kadai.html?name=program09basic02">関数を使ってみよう3（内積の計算）</a></li>
                   <li><a href="kadai.html?name=program09basic03">関数を使ってみよう4（行列の積）</a></li>
                   <li><a href="kadai.html?name=program10basic01">文字列の扱い（整数の取得・浮動小数点の取得）</a></li>
-                  <li><a href="kadai.html?name=program10basic02">（動作未確認）文字列の扱い2（文字列の連結）</a></li>
-                  <li><a href="kadai.html?name=program11basic01">（動作未確認）ポインタを使ってみよう（大きい順に入れ替える関数の作成）</a></li>
-                  <li><a href="kadai.html?name=program11basic02">（動作未確認）ポインタを使ってみよう2（ベクトルの和）</a></li>
-                  <li><a href="kadai.html?name=program12basic02">（動作未確認）ポインタによる文字列操作（メモリ領域の確認）</a></li>
-                  <li><a href="kadai.html?name=program12basic04">（動作未確認）ポインタによる文字列操作（辞書順）</a></li>
+                  <li><a href="kadai.html?name=program10basic02">文字列の扱い2（文字列の連結）</a></li>
+                  <li><a href="kadai.html?name=program11basic01">ポインタを使ってみよう（大きい順に入れ替える関数の作成）</a></li>
+                  <li><a href="kadai.html?name=program11basic02">ポインタを使ってみよう2（ベクトルの和）</a></li>
+                  <li><a href="kadai.html?name=program12basic02">ポインタによる文字列操作（メモリ領域の確認）</a></li>
+                  <li><a href="kadai.html?name=program12basic04">ポインタによる文字列操作（辞書順）</a></li>
               </ul>
       </div>
 	  </main>
