--- a/kadai.html
+++ b/kadai.html
@@ -28,7 +28,14 @@
     </div>
     <div class="login-wrapper">
         <div class="login">
-            <h3>Enter your name</h3>
+            <h2>解答時の注意</h2>
+            <p>本問題はプログラミング的思考のテストである<br>
+                回答開始後は他のページに遷移せず、分からなくても解ききること</p>
+            <p>タブを切り替え、コード断片を並び変えて、プログラムを作成せよ<br>
+                全てのコード断片を使うとは限らない</p>
+            <br>
+            <br>
+            <h3>名前</h3>
             <input id="name" type="text" name="" value="">
             <button class="button" id="login-btn">解答開始</button>
         </div>
