new question(Calendar)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
       </div>
 
 		  <div class="lesson-menu">
-            <h3>課題リスト</h3>
+          <h3>挑戦課題</h3>
+            <ul class="kadai_list">
+              <li><a href="kadai.html?name=program05basic04">文字でカレンダーを作ってみよう</a></li>
+            </ul>
+          <h3>課題リスト</h3>
               <ul class="kadai_list">
                   <!-- <li><a href="tutorial.html">チュートリアル</a></li> -->
                   <li><a href="kadai.html?name=program02basic01">変数を扱ってみよう</a></li>
