new question! (POS system)

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
           <h3>挑戦課題</h3>
             <ul class="kadai_list">
               <li><a href="kadai.html?name=program05basic04">文字でカレンダーを作ってみよう</a></li>
+              <li><a href="kadai.html?name=program08basic01">簡単なレジスターシステムを作ってみよう</a></li>
             </ul>
           <h3>課題リスト</h3>
               <ul class="kadai_list">
