--- a/kadai.html
+++ b/kadai.html
@@ -59,6 +59,9 @@
                 <label class="block_tab_label3 block_tab_label" for="block3">分岐</label>
                 <label class="block_tab_label4 block_tab_label" for="block4">ループ</label>
                 <label class="block_tab_label5 block_tab_label" for="block5">その他</label>
+                <label class="block_tab_label6 block_tab_label" for="block6">変数宣言</label>
+                <label class="block_tab_label7 block_tab_label" for="block7">入出力</label>
+                <label class="block_tab_label8 block_tab_label" for="block8">プロトタイプ宣言</label>
             </div>
             <div class="pad-blockzone-in">
                 <ol id='draggable1' class='sortable'>
