--- a/kadai.html
+++ b/kadai.html
@@ -76,7 +76,7 @@
                 <label class="tab1_label tab_label" for="tab1">問題文</label>
                 <label class="tab2_label tab_label" for="tab2">PAD</label>
                 <label class="tab3_label tab_label" for="tab3">実行</label>
-                <label class="tab4_label tab_label" for="tab4">デバッグ</label>
+                <!-- <label class="tab4_label tab_label" for="tab4">デバッグ</label> -->
             </div>
             <div class="panel_area">
                 <div id="panel1" class="pad pad-question tab_panel">
